--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
     <div class="nav"><h2>CRUD App || WAD Assignment Part B</h2></div>
     <div class="separetor"></div>
-    <div class="notes" id="app">
-        <div class="notes__sidebar">
-            <button class="notes__add" type="button">Add Note</button>
-            <div class="notes__list">
-                <div class="notes__list-item notes__list-item--selected">
-                    <div class="notes__small-title">Lecture Notes</div>
-                    <div class="notes__small-body">I learnt nothing today.</div>
-                    <div class="notes__small-updated">Thursday 3:30pm</div>
+    <div class="file" id="app">
+        <div class="file_sidebar">
+            <button class="file_add" type="button">Add File</button>
+            <div class="file_list">
+                <div class="file_list-item"file__list-item--selected">
+                    <div class="file_small-title">Lecture file</div>
+                    <div class="file_small-body">I learnt nothing today.</div>
+                    <div class="file_small-updated">Thursday 3:30pm</div>
                 </div>
             </div>
         </div>
-        <div class="notes__preview">
-            <input class="notes__title" type="text" placeholder="Enter a title...">
-            <textarea class="notes__body">I am the notes body...</textarea>
+        <div class="file_preview">
+            <input class="file_title" type="text" placeholder="Enter a title...">
+            <textarea class="file_body" placeholder="Enter some data to the file..."></textarea>
         </div> 
     </div>
     <script src="./js/main.js" type="module"></script>
