Updates to save, delete, and update functionality in the app

--- a/index.html
+++ b/index.html
@@ -6,26 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD App || WAD Assignment Part B</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
     <div class="nav"><h2>CRUD App || WAD Assignment Part B</h2></div>
+
     <div class="separetor"></div>
-    <div class="file" id="app">
-        <div class="file_sidebar">
-            <button class="file_add" type="button">Add File</button>
-            <div class="file_list">
-                <div class="file_list-item"file__list-item--selected">
-                    <div class="file_small-title">Lecture file</div>
-                    <div class="file_small-body">I learnt nothing today.</div>
-                    <div class="file_small-updated">Thursday 3:30pm</div>
+
+    <div class="notes" id="app">
+        <!-- <div class="row">
+          <div class="col">
+            <div class="notes_sidebar">
+                <button class="notes_add" type="button">Add notes</button>
+                <div class="notes_list">
+                    <div class="notes_list-item"notes__list-item--selected">
+                        <div class="notes_small-title">notes</div>
+                        <div class="notes_small-body">Ramdom message</div>
+                        <div class="notes_small-updated">Friday 1:27am</div>
+                    </div>
                 </div>
             </div>
+          </div>
+          <div class="col">
+            <div class="notes_preview">
+                <input class="notes_title" type="text" placeholder="Enter a title...">
+                <textarea class="notes_body" placeholder="Enter some data to the notes..."></textarea>
+            </div>
+          </div>
         </div>
-        <div class="file_preview">
-            <input class="file_title" type="text" placeholder="Enter a title...">
-            <textarea class="file_body" placeholder="Enter some data to the file..."></textarea>
-        </div> 
-    </div>
+    </div> -->
+
     <script src="./js/main.js" type="module"></script>
 </body>
 </html>
