--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
+
+<!-- By Edilson Zau -->
+<!-- Inspired By Domenic Code -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD App || WAD Assignment Part B</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./Style/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-    <div class="nav"><h2>CRUD App || WAD Assignment Part B</h2></div>
+    <div class="nav"><img src="./Images/Nust-logo.jpg" alt="Nust Logo"><h5>CRUD App || WAD Assignment Part B</h5></div>
 
     <div class="separetor"></div>
 
@@ -17,10 +21,10 @@
         <!-- <div class="row">
           <div class="col">
             <div class="notes_sidebar">
-                <button class="notes_add" type="button">Add notes</button>
+                <button class="notes_add" type="button">Add File</button>
                 <div class="notes_list">
                     <div class="notes_list-item"notes__list-item--selected">
-                        <div class="notes_small-title">notes</div>
+                        <div class="notes_small-title">File</div>
                         <div class="notes_small-body">Ramdom message</div>
                         <div class="notes_small-updated">Friday 1:27am</div>
                     </div>
@@ -30,12 +34,12 @@
           <div class="col">
             <div class="notes_preview">
                 <input class="notes_title" type="text" placeholder="Enter a title...">
-                <textarea class="notes_body" placeholder="Enter some data to the notes..."></textarea>
+                <textarea class="notes_body" placeholder="Add some information to the file..."></textarea>
             </div>
           </div>
-        </div>
-    </div> -->
-
-    <script src="./js/main.js" type="module"></script>
+        </div>-->
+    </div> 
+    <div class="footer">By &nbsp; <i>Edilson Zau</i>. Software Developer, 2021.</div>
+    <script src="./Scripts/main.js" type="module"></script>
 </body>
 </html>
